--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -5,8 +5,7 @@
 
 \section{Abstract}
 
-\gls{ta} proteins are a functionally diverse group of post\--translationally inserted membrane proteins that have a cytosolic
-N-terminal, a transmembrane $\alpha$ helix, and a short C\--terminal.
+\gls{ta} proteins are a functionally diverse group of post\--translationally inserted membrane proteins that have a cytosolic N-terminal, a transmembrane $\alpha$ helix, and a short C\--terminal tail.
 The \gls{tmh} and flanking regions of the \gls{ta} protein have been shown to contain sufficient information for subcellular targeting.
 Here, we built datasets based on sequence definitions of plausible \gls{ta} proteins using the  UniProt database.
 We show that any statistical differences between the hydrophobicity of the \gls{tmh} between \gls{ta} proteins belonging to mammalian, plant, or yeast organisms are, if at all present, small.
@@ -782,3 +781,9 @@ We could not find any clear trends or perform statistical work on the interactor
 Furthermore, the spontaneously inserting \gls{ta} proteins PTP1b and cytochrome b5 appear to share a polar face that emerges in structural models and a strong ``positive\--inside'' ``negative\--outside'' electrostatic surface.
 The polar face may be responsible for the promotion insertion potential in the absence of insertion proteins since when the sequence is scrambled, the insertion potential is reduced \cite{Brambillasca2006}.
 The positively and negatively charged residues are distributed like an ideal anchoring \gls{tmh} \cite{Baker2017} which could allow the marginally hydrophobic \gls{tmh} to perform as a suitable membrane anchoring feature.
+
+%Still, several important questions remain unanswered that limit our understanding of \gls{ta} protein biogenesis.
+%How truly redundant are the different pathways?
+%Hydrophobicity alone does not determine biogenesis pathway and charge is clearly not an absolute determinant besides that; what are the biophysical signatures of \gls{ta} proteins that determine their path?
+%Why do some post-translationally inserted \gls{ta} proteins have C-terminal tail lengths exceding the traditional 25 residue length, whereas other proteins with far shorter tails than this cut-off are co-translationally inserted?
+%Ultimately, for these questions to be more thoroughly answered, as we have demonstrated, annotation of the protein databases must be completed. Currently there is no way to probe if a protein is post-translationally inserted or co-translationally inserted.
