--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1007,34 +1007,30 @@ The TOPDB database~\cite{Dobson2015} is a manually curated database composed of 
 Experiments include fusion proteins, posttranslational modifications, protease experiments, immunolocalization, chemical modifications as well as revertants, sequence motifs with known mandatory membrane-embedded topologies, and tailoring mutants (Table~\ref{table:topdbevidence}).
 
 \begin{table}[htbp]
-
+  \tiny
   \centering
 
   \captionof{table}[The experimental evidences of TOPDB.]{\textbf{The experimental evidences of TOPDB.}
   The total number of experimental evidences that contribute to ExpAll according to the TOPDB database (More information at \url{http://topdb.enzim.hu/?m=exptype&mid=14}).
   ``*'' refers to the total number of a subsection being larger than the total of the subcategories, likely due to lack of annotation where ambiguous literature evidence is counted toward the total, but cannot be categorised further.}
-
     \resizebox{\textwidth}{!}{
-    \small
     \begin{tabular}{cp{5em}cp{5em}}
-
     \toprule
-
     \multicolumn{2}{p{10em}}{\textbf{Experiment}} & \multicolumn{1}{p{5em}}{\textbf{Bitopic (Single-pass)}} & \textbf{Polytopic (Multi-pass)} \\
     \midrule
     \multicolumn{1}{c}{\multirow{13}[26]{*}{\textbf{Fusion}}} & PhoA  & 97    & \multicolumn{1}{c}{2332} \\
-\cmidrule{2-4}          & PhoAS & 0     & \multicolumn{1}{c}{90} \\
-\cmidrule{2-4}          & LacZ  & 20    & \multicolumn{1}{c}{433} \\
-\cmidrule{2-4}          & PhoALacZ & 0     & \multicolumn{1}{c}{224} \\
-\cmidrule{2-4}          & BlaM  & 162   & \multicolumn{1}{c}{570} \\
-\cmidrule{2-4}          & BAD   & 0     & \multicolumn{1}{c}{2} \\
-\cmidrule{2-4}          & PL    & 0     & \multicolumn{1}{c}{47} \\
-\cmidrule{2-4}          & GFP   & 18    & \multicolumn{1}{c}{591} \\
-\cmidrule{2-4}          & HIS   & 4     & \multicolumn{1}{c}{2} \\
-\cmidrule{2-4}          & SplitUbiquitin & 0     & \multicolumn{1}{c}{11} \\
-\cmidrule{2-4}          & Suc2  & 0     & \multicolumn{1}{c}{96} \\
-\cmidrule{2-4}          & Other & 1     & \multicolumn{1}{c}{137} \\
-\cmidrule{2-4}          & Total Fusion & \multicolumn{1}{p{5em}}{316*} & 4600* \\
+    \cmidrule{2-4}          & PhoAS & 0     & \multicolumn{1}{c}{90} \\
+    \cmidrule{2-4}          & LacZ  & 20    & \multicolumn{1}{c}{433} \\
+    \cmidrule{2-4}          & PhoALacZ & 0     & \multicolumn{1}{c}{224} \\
+    \cmidrule{2-4}          & BlaM  & 162   & \multicolumn{1}{c}{570} \\
+    \cmidrule{2-4}          & BAD   & 0     & \multicolumn{1}{c}{2} \\
+    \cmidrule{2-4}          & PL    & 0     & \multicolumn{1}{c}{47} \\
+    \cmidrule{2-4}          & GFP   & 18    & \multicolumn{1}{c}{591} \\
+    \cmidrule{2-4}          & HIS   & 4     & \multicolumn{1}{c}{2} \\
+    \cmidrule{2-4}          & SplitUbiquitin & 0     & \multicolumn{1}{c}{11} \\
+    \cmidrule{2-4}          & Suc2  & 0     & \multicolumn{1}{c}{96} \\
+    \cmidrule{2-4}          & Other & 1     & \multicolumn{1}{c}{137} \\
+    \cmidrule{2-4}          & Total Fusion & \multicolumn{1}{p{5em}}{316*} & 4600* \\
     \midrule
     \multicolumn{1}{c}{\multirow{5}[10]{*}{\textbf{PostTransMod}}} & NGlyc & 4634  & \multicolumn{1}{c}{1130} \\
 \cmidrule{2-4}          & Cman  & 0     & \multicolumn{1}{c}{6} \\
