--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -116,7 +116,15 @@ There were 82 records for frizzled/smooth, of which 41 were cluster representiti
 In serotonin,91 original records were represented by 28 records.
 There were 13 fungal mating proteins, represented by 9 after UniRef50.
 
+\subsubsection{Ion channels}
 
+\subsection{Gene Ontology}
+77153 protein records matched the query \url{annotation:(type:transmem) AND reviewed:yes} in UniProt \cite{TheUniProtConsortium2014}.
+30045 records of these represented those proteins after submitting the list to UniRef50.
+To gain an approximate idea of what proteins may have cooperative \gls{tmh}s, we submitted that non-redundant SwissProt transmembrane dataset to PANTHER and used their pie chart visualisation\cite{Mi2017}.
+We also submitted a constricted list of the non-redundant SwissProt transmembrane dataset to PANTHER by sorting the list according to proteins with sequentially adjacent \gls{tmh}s that had the greatest difference in Kyte \& Doolittle hydrophobicity \cite{Kyte1982}.
+This consisted of the top 102 pairs from a list of 101604 (the top 0.1\%) \gls{tmh} pairs from 87 unique UniProt records.
+In PANTHER, these hit 59 genes with 58 functions.
 
 \subsection{Complexity}
 \subsection{Statistics}
