added figures to multipass-chapter

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -20,7 +20,7 @@ Secondly is that it is emerging that different membranes have different thicknes
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
-		\captionof{figure}[A cartoon showing the general components of the membrane and a typical \gls{tmh}.]{\textbf{A cartoon showing the general components of the membrane and a typical \gls{tmh}.}
+		\captionof{figure}[A cartoon showing the general components of the membrane and a typical TMH.]{\textbf{A cartoon showing the general components of the membrane and a typical TMH}.}
 The example used here for illustrative purposes is the transmembrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
 Dark grey areas denote the area of lipid head groups.
 The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane.
