--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -98,7 +98,7 @@ With these large-scale datasets and a sensitive normalisation approach, new sequ
 
 \section{Results}
 
-\subsection{Acidic residues within and nearby~\gls{tmh} segments are rare}
+\subsection{Acidic residues within and nearby TMH segments are rare}
 
 In order to reliably compare the amino acid sequence properties of~\gls{tmh}s, we assembled datasets of~\gls{tmh} proteins from what are likely to be the best in terms of quality and comprehensiveness of annotation in eukaryotic and prokaryotic representative genomes, as well as composite datasets to represent larger taxonomic groups and with regard to sub-cellular locations (see Table \ref{table:acidicresiduesarerare}).
 In total, 3292 single-pass~\gls{tmh} segments and 29898 multi-pass~\gls{tmh} segments were extracted from various UniProt~\cite{TheUniProtConsortium2014} text files according to TRANSMEM annotation (download dated 20--03--2016).
