updated figures, minor typos corrrected

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -38,6 +38,14 @@ During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome a
 This complex then binds to the \gls{sr} in association with the membrane bound translocon.
 The nascent peptide is then fed into the translocon as it is being translated; hence ``co-translational insertion''.
 
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=1\textwidth]{multipass-folding/sequential-insertion}
+        \captionof{figure}[A cartoon of the ribosome in association with the translocon during insertion.]{\textbf{A cartoon of the ribosome in association with the translocon during insertion.}
+}
+\label{fig:sequential-insertion}
+\end{figure}
+
 \gls{ap}s are typically 10-15 residues long that bind to the upper end of the ribosomal exit tunnel.
 Once a specific mRNA codon is recognised, ribosomal stalling is induced \cite{Ito2010} and translation is halted unless a strong enough pulling force from the downstream insertion is acting on the nascent chain at that time \cite{Butkus2013}.
 Several ``strengths'' of \gls{ap} have been identified.
