--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -9,7 +9,7 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 \section{$\alpha$ Helices; Structure And Function}
 
-\subsection{transmembrane Helix Sequence Composition}
+\subsection{Transmembrane Helix Sequence Composition}
 
 Measurements of the \gls{tmh} regions have found that they are roughly 20 residues in length; 17.3$\pm$3.1 from 160 \gls{tmh}s~\cite{Hildebrand2004}, 27.1$\pm$5.4 residues based on 129 \gls{tmh}s~\cite{Ulmschneider2001}, 26.4 residues based on 45 \gls{tmh}s~\cite{Bowie1997}, 25.3$\pm$6.0 residues based on 702 \gls{tmh}s~\cite{Cuthbertson2005a}, 24.6$\pm$5.6 from 837 \gls{tmh}s~\cite{Baeza-Delgado2013}, and 28.6$\pm$1.6\AA~to 33.5~$\pm$3.1\AA~from 191 proteins depending on membrane types~\cite{Pogozheva2013}.
 There are a couple of reasons for this variation.
@@ -167,7 +167,23 @@ The algorithm searches for and concatenates sub-threshold segments for the Shann
 The lowest probability sub-segment can be defined as $ K_1=\log N/L $.
 By altering the window lengths, and the thresholds SEG can be optimised to search for subtle compositional deviations, such as coil-coiled regions.
 
+\subsection{Signal peptides}
+
 \section{$\alpha$ Helices In Membranes }
+
+\subsection{The Importance Of Transmembrane Proteins}
+Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
+Integral \gls{tmp} are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}.
+These proteins allow biochemical pathways that traverse the various biological membranes used in life.
+%citation for drug targets
+
+%Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
+The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and  electrostatic equilibrium.
+Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
+This hydrophobicity and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
+Another way of describing it is that they fiercely dissociate from the water.
+The overall $\Delta G$ for a \gls{tmh} in the membrane is -12kcal${mol}^{\--1}$~\cite{Cymer2015}; the association of the helix in the membrane is typically spontaneous.
+%Expand this section
 
 \subsection{The Transmembrane Protein Problem}
 % Needs references and a figure showing rate of globular proteins and membrane proteins.
@@ -194,6 +210,7 @@ Worryingly, because of this oversight, it appears that between 2.1\% and 13.6\% 
 %A group linking computational biophysics http://www.ks.uiuc.edu/History/membrane/
 %Some waffle about Hooke
 
+\subsection{The membrane protein revolution}
  Over the last decade, Nanodiscs have been routinely used to much more easily obtain crystal structures.
 Nanodiscs overcome some of the major challenges caused by the hydrophobic helices and a more faithful representation of the biological membranes than alternative model membranes like liposomes~\cite{Borch2009}.
 
@@ -207,20 +224,8 @@ Nanodiscs overcome some of the major challenges caused by the hydrophobic helice
 %Gorter & Grendel
 %Danielli and Davson http://biology.stackexchange.com/questions/20264/why-was-the-davson-danielli-model-rejected/24051#24051
 
+\subsection{Bioinformatics in transmembrane biology}
 
-\subsection{The Importance Of Transmembrane Proteins}
-Membrane-bound proteins underpin almost every biological process directly, or indirectly, from photosynthesis to respiration.
-Integral \gls{tmp} are encoded by between a third to a half of the genes in the human genome which reflects their biological importance~\cite{Hopkins2002, Almen2009, Wang2013}.
-These proteins allow biochemical pathways that traverse the various biological membranes used in life.
-%citation for drug targets
-
-%Function is a result of the structure, and here the structure and sequence are supposedly very relatable.
-The relationship between the membrane and \gls{tmp}s is underpinned by complex thermodynamic and  electrostatic equilibrium.
-Once inserted the protein doesn't leave the membrane as a result of the \gls{tmh} being very hydrophobic.
-This hydrophobicity and the hydrophobicity of the lipid tails means that they self-associate and this association is entropically driven by water.
-Another way of describing it is that they fiercely dissociate from the water.
-The overall $\Delta G$ for a \gls{tmh} in the membrane is -12kcal${mol}^{\--1}$~\cite{Cymer2015}; the association of the helix in the membrane is typically spontaneous.
-%Expand this section
 
 \section{Biological Membrane Composition}
 The compartmentalisation of cellular biochemistry is arguably one of the most significant events to have occurred in evolution and is certainly one of the fundamental prerequisites for life~\cite{Koshland2002}.
