New table for datasets and information entropy figure ready

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -17,15 +17,15 @@ Primarily is that the boundaries of \gls{tmh}s are extremely hard to precisely i
 Secondly is that it is emerging that different membranes have different thicknesses~\cite{VanMeer2008}, and that this is directly reflected in the hydrophobic lengths of the \gls{tmh}~\cite{Sharpe2010, Pogozheva2013}.
 %WALP and KALP peptides as typical peptides
 
-\begin{figure}[!ht]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
-		\captionof{figure}[A cartoon showing the general components of the membrane and a typical TMH.]{\textbf{A cartoon showing the general components of the membrane and a typical TMH}.}
-The example used here for illustrative purposes is the transmembrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
-Dark grey areas denote the area of lipid head groups.
-The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane.
-The helix core is mostly composed of hydrophobic residues.
-Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.}
+		\captionof{figure}[A cartoon showing the general components of the membrane and a typical TMH.]{\textbf{A cartoon showing the general components of the membrane and a typical TMH}.
+		The example used here for illustrative purposes is the transmembrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}.
+		Dark grey areas denote the area of lipid head groups.
+		The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane.
+		The helix core is mostly composed of hydrophobic residues.
+		Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.}
 
 \label{fig:helixcartoon1}
 \end{figure}
