--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -84,18 +84,26 @@ This could be facilitated during the probing of a \gls{tmh} from the translocon 
 In order to identify which type of \gls{tmp} there may be potentially large numbers of cooperateive \gls{tmh}, the hydrophobicities for all \gls{tmh}s in a redudant version of SwissProt were calculated according to the Kyte \& Dolittle hydropathy scale \cite{Kyte1982}.
 The absolute difference between each sequentially adjacent \gls{tmh} was calculated.
 The full list, along with the 0.1\% \gls{tmh} pair were submitted to PANTHER \cite{Mi2017}.
+We found that transporters were by far the most abundant in this sub\---list relative to the global TMP list, however it should be considered that ``transporters'' in this sense also includes both ion transporters and ion channels (Figure \ref{fig:good-bad-ontology}).
+Among the other prevelent functions are receptors, binding proteins, and signal transducers.
+All these were predominantly \gls{gpcr}s.
+
 
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{multipass-folding/good-bad-ontology}
-		\captionof{figure}[Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pais.]{\textbf{Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pairs.}}
+		\captionof{figure}[Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pais.]{\textbf{Pie charts of a non-redundant list of TMPs compared to a list of TMPs containing the most hydrophobically different TMH pairs.}
+    The output of PANTHER Gene ontology server of A) a non-redundant list of all TMPs in SwissProt and B) a list of the TMPs with the highest (0.1\%) hydrophobic discrepency between adjacent TMHs.
+    Note that the proportions of Binding TMPs stay roughly the same, receptors and signal transducers reduce slightly, catalytic proteins is reduced by $\tilde$60\% and transporter more than doubles in proportion.}
 
 \label{fig:good-bad-ontology}
 \end{figure}
 
+Since catalyic function decreased so much, as a trend we thought that catalytic function of the \gls{tmp} may not be associated with high hydrophobic disrecepency between \gls{tmh}s within the protein.
+This gives us an idea of search space where highly polar \gls{tmh}s are proximally adjacent to typically hydrophobic \gls{tmh}s; \gls{gpcr}s and membrane transporters.
 %Need percentage decreases
 
-\subsection{GPCRs contain high a conserved relatively polar TMH}
+\subsection{GPCRs contain conserved relatively polar TMHs}
 
 \begin{figure}[!ht]
 \centering
